// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectDropdown > should render disabled option base 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-18-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-18-input"
            id="downshift-18-label"
          />
          <div
            class="css-xk5t3v"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-18-menu"
                aria-labelledby="downshift-18-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1vs1awz"
                data-testid="SelectDropdown__input"
                disabled=""
                id="downshift-18-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-18-label"
          id="downshift-18-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render disabled option group 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-20-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-20-input"
            id="downshift-20-label"
          />
          <div
            class="css-xk5t3v"
            disabled=""
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-20-menu"
                aria-labelledby="downshift-20-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1vs1awz"
                data-testid="SelectDropdown__input"
                disabled=""
                id="downshift-20-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-20-label"
          id="downshift-20-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render invalid option base 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-12mz4i6"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-14-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-14-input"
            id="downshift-14-label"
          />
          <div
            class="css-12mz4i6"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-14-menu"
                aria-invalid="true"
                aria-labelledby="downshift-14-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-14-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              data-testid="Input__addon-end"
            >
              <span
                data-testid="Input__error"
              >
                <div
                  class="text-theme-danger-500 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </span>
              <div
                class="pl-3"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-danger-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-14-label"
          id="downshift-14-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render invalid option group 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-12mz4i6"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-16-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-16-input"
            id="downshift-16-label"
          />
          <div
            class="css-12mz4i6"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-16-menu"
                aria-invalid="true"
                aria-labelledby="downshift-16-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-16-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
              data-testid="Input__addon-end"
            >
              <span
                data-testid="Input__error"
              >
                <div
                  class="text-theme-danger-500 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </span>
              <div
                class="pl-3"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-danger-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-16-label"
          id="downshift-16-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-0-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-0-input"
            id="downshift-0-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-0-menu"
                aria-labelledby="downshift-0-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-0-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-0-label"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with custom label 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-6-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-6-input"
            id="downshift-6-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-6-menu"
                aria-labelledby="downshift-6-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-6-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-6-label"
          id="downshift-6-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with custom label and allowed overflow 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-10-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-10-input"
            id="downshift-10-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-10-menu"
                aria-labelledby="downshift-10-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-10-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-10-label"
          id="downshift-10-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-141-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-141-input"
            id="downshift-141-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-141-menu"
                aria-labelledby="downshift-141-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-141-input"
                placeholder="Select option"
                type="text"
                value="3"
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-141-label"
          id="downshift-141-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-38-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-38-input"
            id="downshift-38-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Option 3
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-38-menu"
                aria-labelledby="downshift-38-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-38-input"
                placeholder="Select option"
                type="text"
                value="Option 3"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Option 3
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-38-label"
          id="downshift-38-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-44-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-44-input"
            id="downshift-44-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-44-menu"
                aria-labelledby="downshift-44-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-44-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-44-label"
          id="downshift-44-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option base without caret 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-22-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-22-input"
            id="downshift-22-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-22-menu"
                aria-labelledby="downshift-22-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-22-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-22-label"
          id="downshift-22-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-2-input"
            id="downshift-2-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-2-menu"
                aria-labelledby="downshift-2-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-2-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-2-label"
          id="downshift-2-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with custom label 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-8-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-8-input"
            id="downshift-8-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-8-menu"
                aria-labelledby="downshift-8-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-8-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-8-label"
          id="downshift-8-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with custom label and allowed overflow 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-12-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-12-input"
            id="downshift-12-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-12-menu"
                aria-labelledby="downshift-12-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-12-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-12-label"
          id="downshift-12-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with default value when free text is allowed 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-144-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-144-input"
            id="downshift-144-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-144-menu"
                aria-labelledby="downshift-144-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-144-input"
                placeholder="Select option"
                type="text"
                value="3"
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-144-label"
          id="downshift-144-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with initial default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="3"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-41-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-41-input"
            id="downshift-41-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            Item 1
            …
          </div>
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-41-menu"
                aria-labelledby="downshift-41-label"
                autocomplete="off"
                class="no-ligatures w-full border-none css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-41-input"
                placeholder="Select option"
                type="text"
                value="Item 1"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center font-normal opacity-50"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  Item 1
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-41-label"
          id="downshift-41-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group with wrong default value 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-46-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-46-input"
            id="downshift-46-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-46-menu"
                aria-labelledby="downshift-46-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-46-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-46-label"
          id="downshift-46-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render option group without caret 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-24-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-24-input"
            id="downshift-24-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-24-menu"
                aria-labelledby="downshift-24-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-24-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-24-label"
          id="downshift-24-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render while allowing horizontal overflow 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-52-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-52-input"
            id="downshift-52-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-52-menu"
                aria-labelledby="downshift-52-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-52-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-52-label"
          id="downshift-52-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render with custom wrapper class name 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-4-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-4-input"
            id="downshift-4-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-4-menu"
                aria-labelledby="downshift-4-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-4-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-4-label"
          id="downshift-4-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render with empty options 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-48-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-48-input"
            id="downshift-48-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-48-menu"
                aria-labelledby="downshift-48-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-48-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-48-label"
          id="downshift-48-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectDropdown > should render with options values as numbers 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-50-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-50-input"
            id="downshift-50-label"
          />
          <div
            class="css-n1b0kl"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-50-menu"
                aria-labelledby="downshift-50-label"
                autocomplete="off"
                class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                data-testid="SelectDropdown__input"
                id="downshift-50-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center px-1 py-2"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="caret-down"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-50-label"
          id="downshift-50-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
